# erp-aries-ai

./: .env.postgres  .gitignore  AGENT-PROMPTS.md  AGENT_PORTING_CONTRACT.md  AUDIT_REPORT.md  SEED.md  alembic.ini  aries_flow.md  aries_flow_v2.md  backend.md  chat-completions-proxy.mjs  frontend.md  middleware.ts  migrate-reference-data.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  readme.md  scripts.md  test-agent-loop.py  test-azure-agent-loop.py  test-chat-completions.mjs  test-chat-completions.py  test-unified-agent-loop.py  tmp_audit_db.ts  tmp_check_db.ts  tmp_create_pgvector.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  wiki.md
app/: layout.tsx  page.tsx
app/actions/: rag.ts  webAuthnActions.ts
app/ai/: actions.ts  loading.tsx  page.tsx
app/auth/: actions.ts  page.tsx
app/channels/: actions.ts  channels-client.tsx  loading.tsx  page.tsx
app/dashboard/: ai-chat-panel.tsx  app-layout.tsx  layout.tsx  page.tsx
app/enquiries/: actions.ts  (+2 more)
components/: app-layout.tsx  error-boundary.tsx
docs/: DUTIES_AND_RESPIBILITIES.md  DUTIES_AND_RESPONSIBILITIES.md  DUTIES_AND_RESPONSIBILITIES_draft.md
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
hooks/: use-locale-format.ts  use-responsive.ts  use-session.ts  usePageContext.ts
lib/: agent-loop.ts  ai-tool-adapters.ts  api.ts  azure-openai.ts  db-sql.ts  export-csv.ts  frappe-auth.ts  frappe-client.ts  frappe-erpnext.ts  gemini-client.ts  mcp-gateway.ts  password.ts  prisma.ts  rag-db.ts  rag-embed.ts  rules.ts  throttledFetch.ts  utils.ts  uuid.ts  validators.ts
prisma/: schema.prisma  schema.prisma.backup  schema.prisma.backup2  seed-auth.ts
public/: site.webmanifest
scripts/: browser-click-test.ts  browser-e2e-test.ts  browser-form-crud-test.ts  estimate-seed-cost.ts  generate_types.py  migrate_to_postgres.py  module_mapping.json  seed-all-tables.ts  seed-by-module.ts  seed-generate.ts  seed-import.ts  seed_aries_data.py  seed_data.py  smoke-docfield.ts  test-structured-output.ts
sql/: custom_field.json  doc_perm.json  doc_type.json  load-tabdocfield-azure.sql  property_setter.json
store/: useActionDispatcher.ts  useAppStore.ts
survey/: AI_ASSISTANT_ARCHITECTURE.md  agent-audit-report.md  agent-gap-analysis-round1.md  agentloop-port-file-by-file.md  ai-assistant-impact-audit.md  ai-ui-actions-report.md  backend-portability-report.md  backend-rag-wiki-llm-audit-report.md  bun-api-migration-audit.md  bun-compatibility-audit.md  erp-feature-audit-2026-05-06.md  file-by-file-porting-plan.md  frappe-metadata-layout-rules.md  llm-wiki-rag-replacement.md  markitdown-feasibility-report.md  nextjs-patterns-audit-report.md  phase-1-4-test-observation.md  phase-8-plus-porting-plan.md  porting-agentloop-to-nextjs.md  production-readiness-audit.md  revolyzz-dynamic-form-pattern.md  revolyzz-patterns-reference.md  stage-1-erp-list-client.md  stage-2-erp-grid-client.md  stage-3-migrate-custom-pages.md  stage-4-hr-prisma-port.md  stages-readme.md
types/: api.ts  frappe-gantt.d.ts  turndown-plugin-gfm.d.ts
wiki/: AGENTS.md  index.md  log.md
(+1027 files in other folders)
