[project]
name = "aries-erp"
version = "0.1.0"
description = "Hybrid AI Presales Consultant — MCP-native, Gemini-powered, Wiki-first"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # AI / LLM
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-storage>=2.18.0",

    # Document ingestion
    "markitdown[all]>=0.1.0",

    # Search / Retrieval
    "google-cloud-discoveryengine>=0.13.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3.0",

    # MCP
    "mcp>=1.2.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",

    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",

    # Document generation
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
