[project]
name = "aries-erp"
version = "0.3.0"
description = "Aries Marine ERP — AI-Powered, MCP-Native Enterprise Resource Planning"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-storage>=2.18.0",

    "markdown[all]>=0.1.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",

    "mcp>=1.2.0",
    "httpx>=0.27.0",

    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
